# messenger

./: pyproject.toml
src/messenger/: __init__.py
src/messenger/backend/app/: main.py
src/messenger/backend/app/api_v1/: main.py
src/messenger/backend/app/api_v1/routers/: __init__.py  frontend_router.py
src/messenger/backend/app/ws/: router.py
src/messenger/frontend/public/: index.html
src/messenger/frontend/public/static/css/: style.css
src/messenger/frontend/public/static/js/: send_button.js  socket_manager.js
